# brig-discord

./: Cargo.toml  Makefile  README.md  manifest.toml
.tickets/: P10-02-discord-tls-unify.md  P5-01-discord-mention-injection.md  P5-04-discord-channel-restriction.md  bd-151a.md  bd-p0rt.md  bd-xj85.md
contrib/: manifest-community.toml  manifest-ops.toml
docs/: GUIDE.md
port/: Makefile  distinfo  pkg-descr  pkg-message  pkg-plist
scripts/rc.d/: brig_discord
src/: main.rs
