[package]
name = "brig-discord"
version = "0.2.0"
edition = "2021"
description = "Discord gateway for Brig - bridges Discord messages to Brig's unix socket"
license = "BSD-2-Clause"
repository = "https://github.com/jmspring/brig-discord"

[dependencies]
ureq = "2.9"
tungstenite = { version = "0.21", default-features = false, features = ["handshake", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
